--- a/sales_culture.ipynb
+++ b/sales_culture.ipynb
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1157,20 +1157,332 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>87929</th>\n",
+       "      <td>1101330006</td>\n",
+       "      <td>1.101330e+09</td>\n",
+       "      <td>1101330000</td>\n",
+       "      <td>3141.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>R-2</td>\n",
+       "      <td>JAMAICA PLAIN</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F - Forced Hot Air</td>\n",
+       "      <td>I - Indiv. Cntrl</td>\n",
+       "      <td>C - Central AC</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T - Through</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87930</th>\n",
+       "      <td>1101330008</td>\n",
+       "      <td>1.101330e+09</td>\n",
+       "      <td>1101330000</td>\n",
+       "      <td>3141.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>R-3</td>\n",
+       "      <td>JAMAICA PLAIN</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F - Forced Hot Air</td>\n",
+       "      <td>I - Indiv. Cntrl</td>\n",
+       "      <td>C - Central AC</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T - Through</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88786</th>\n",
+       "      <td>1102033002</td>\n",
+       "      <td>1.102033e+09</td>\n",
+       "      <td>1102033000</td>\n",
+       "      <td>3231.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>1</td>\n",
+       "      <td>JAMAICA PLAIN</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F - Forced Hot Air</td>\n",
+       "      <td>I - Indiv. Cntrl</td>\n",
+       "      <td>C - Central AC</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T - Through</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88787</th>\n",
+       "      <td>1102033004</td>\n",
+       "      <td>1.102033e+09</td>\n",
+       "      <td>1102033000</td>\n",
+       "      <td>3231.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>2</td>\n",
+       "      <td>JAMAICA PLAIN</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F - Forced Hot Air</td>\n",
+       "      <td>I - Indiv. Cntrl</td>\n",
+       "      <td>C - Central AC</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>T - Through</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88788</th>\n",
+       "      <td>1102033006</td>\n",
+       "      <td>1.102033e+09</td>\n",
+       "      <td>1102033000</td>\n",
+       "      <td>3231.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>3</td>\n",
+       "      <td>JAMAICA PLAIN</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F - Forced Hot Air</td>\n",
+       "      <td>I - Indiv. Cntrl</td>\n",
+       "      <td>C - Central AC</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>T - Through</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163060</th>\n",
+       "      <td>2012245112</td>\n",
+       "      <td>2.012245e+09</td>\n",
+       "      <td>2012245000</td>\n",
+       "      <td>5050.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>556</td>\n",
+       "      <td>WEST ROXBURY</td>\n",
+       "      <td>2132.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>W - Ht Water/Steam</td>\n",
+       "      <td>C - Common</td>\n",
+       "      <td>N - None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F - Front/Street</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163062</th>\n",
+       "      <td>2012245116</td>\n",
+       "      <td>2.012245e+09</td>\n",
+       "      <td>2012245000</td>\n",
+       "      <td>5050.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>558</td>\n",
+       "      <td>WEST ROXBURY</td>\n",
+       "      <td>2132.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>W - Ht Water/Steam</td>\n",
+       "      <td>C - Common</td>\n",
+       "      <td>N - None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F - Front/Street</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163066</th>\n",
+       "      <td>2012245124</td>\n",
+       "      <td>2.012245e+09</td>\n",
+       "      <td>2012245000</td>\n",
+       "      <td>5050.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>562</td>\n",
+       "      <td>WEST ROXBURY</td>\n",
+       "      <td>2132.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>W - Ht Water/Steam</td>\n",
+       "      <td>C - Common</td>\n",
+       "      <td>N - None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>F - Front/Street</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>N - No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163067</th>\n",
+       "      <td>2012245126</td>\n",
+       "      <td>2.012245e+09</td>\n",
+       "      <td>2012245000</td>\n",
+       "      <td>5050.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>563</td>\n",
+       "      <td>WEST ROXBURY</td>\n",
+       "      <td>2132.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>W - Ht Water/Steam</td>\n",
+       "      <td>C - Common</td>\n",
+       "      <td>N - None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>A - Rear Above</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>Y - Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163068</th>\n",
+       "      <td>2012245128</td>\n",
+       "      <td>2.012245e+09</td>\n",
+       "      <td>2012245000</td>\n",
+       "      <td>5050.0</td>\n",
+       "      <td>WASHINGTON ST</td>\n",
+       "      <td>564</td>\n",
+       "      <td>WEST ROXBURY</td>\n",
+       "      <td>2132.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>W - Ht Water/Steam</td>\n",
+       "      <td>C - Common</td>\n",
+       "      <td>N - None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>A - Rear Above</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A - Average</td>\n",
+       "      <td>Y - Yes</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 60 columns</p>\n",
+       "<p>332 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [PID, CM_ID, GIS_ID, ST_NUM, ST_NAME, UNIT_NUM, CITY, ZIP_CODE, BLDG_SEQ, NUM_BLDGS, LUC, LU, LU_DESC, BLDG_TYPE, OWN_OCC, OWNER, OWNER MAIL ADDRESS, RES_FLOOR, CD_FLOOR, RES_UNITS, COM_UNITS, RC_UNITS, LAND_SF, GROSS_AREA, LIVING_AREA, LAND_VALUE, BLDG_VALUE, TOTAL_VALUE, GROSS_TAX, YR_BUILT, YR_REMODEL, STRUCTURE_CLASS, ROOF_STRUCTURE, ROOF_COVER, INT_WALL, EXT_FNISHED, INT_COND, EXT_COND, OVERALL_COND, BED_RMS, FULL_BTH, HLF_BTH, KITCHENS, TT_RMS, BDRM_COND, BTHRM_STYLE1, BTHRM_STYLE2, BTHRM_STYLE3, KITCHEN_TYPE, KITCHEN_STYLE1, KITCHEN_STYLE2, KITCHEN_STYLE3, HEAT_TYPE, HEAT_FUEL, AC_TYPE, FIREPLACES, ORIENTATION, NUM_PARKING, PROP_VIEW, CORNER_UNIT]\n",
-       "Index: []\n",
+       "               PID         CM_ID      GIS_ID  ST_NUM        ST_NAME UNIT_NUM  \\\n",
+       "87929   1101330006  1.101330e+09  1101330000  3141.0  WASHINGTON ST      R-2   \n",
+       "87930   1101330008  1.101330e+09  1101330000  3141.0  WASHINGTON ST      R-3   \n",
+       "88786   1102033002  1.102033e+09  1102033000  3231.0  WASHINGTON ST        1   \n",
+       "88787   1102033004  1.102033e+09  1102033000  3231.0  WASHINGTON ST        2   \n",
+       "88788   1102033006  1.102033e+09  1102033000  3231.0  WASHINGTON ST        3   \n",
+       "...            ...           ...         ...     ...            ...      ...   \n",
+       "163060  2012245112  2.012245e+09  2012245000  5050.0  WASHINGTON ST      556   \n",
+       "163062  2012245116  2.012245e+09  2012245000  5050.0  WASHINGTON ST      558   \n",
+       "163066  2012245124  2.012245e+09  2012245000  5050.0  WASHINGTON ST      562   \n",
+       "163067  2012245126  2.012245e+09  2012245000  5050.0  WASHINGTON ST      563   \n",
+       "163068  2012245128  2.012245e+09  2012245000  5050.0  WASHINGTON ST      564   \n",
        "\n",
-       "[0 rows x 60 columns]"
+       "                 CITY  ZIP_CODE  BLDG_SEQ  NUM_BLDGS  ...  KITCHEN_STYLE2  \\\n",
+       "87929   JAMAICA PLAIN    2130.0       1.0          1  ...             NaN   \n",
+       "87930   JAMAICA PLAIN    2130.0       1.0          1  ...             NaN   \n",
+       "88786   JAMAICA PLAIN    2130.0       1.0          1  ...             NaN   \n",
+       "88787   JAMAICA PLAIN    2130.0       1.0          1  ...             NaN   \n",
+       "88788   JAMAICA PLAIN    2130.0       1.0          1  ...             NaN   \n",
+       "...               ...       ...       ...        ...  ...             ...   \n",
+       "163060   WEST ROXBURY    2132.0       1.0          1  ...             NaN   \n",
+       "163062   WEST ROXBURY    2132.0       1.0          1  ...             NaN   \n",
+       "163066   WEST ROXBURY    2132.0       1.0          1  ...             NaN   \n",
+       "163067   WEST ROXBURY    2132.0       1.0          1  ...             NaN   \n",
+       "163068   WEST ROXBURY    2132.0       1.0          1  ...             NaN   \n",
+       "\n",
+       "       KITCHEN_STYLE3           HEAT_TYPE         HEAT_FUEL         AC_TYPE  \\\n",
+       "87929             NaN  F - Forced Hot Air  I - Indiv. Cntrl  C - Central AC   \n",
+       "87930             NaN  F - Forced Hot Air  I - Indiv. Cntrl  C - Central AC   \n",
+       "88786             NaN  F - Forced Hot Air  I - Indiv. Cntrl  C - Central AC   \n",
+       "88787             NaN  F - Forced Hot Air  I - Indiv. Cntrl  C - Central AC   \n",
+       "88788             NaN  F - Forced Hot Air  I - Indiv. Cntrl  C - Central AC   \n",
+       "...               ...                 ...               ...             ...   \n",
+       "163060            NaN  W - Ht Water/Steam        C - Common        N - None   \n",
+       "163062            NaN  W - Ht Water/Steam        C - Common        N - None   \n",
+       "163066            NaN  W - Ht Water/Steam        C - Common        N - None   \n",
+       "163067            NaN  W - Ht Water/Steam        C - Common        N - None   \n",
+       "163068            NaN  W - Ht Water/Steam        C - Common        N - None   \n",
+       "\n",
+       "       FIREPLACES       ORIENTATION  NUM_PARKING    PROP_VIEW  CORNER_UNIT  \n",
+       "87929         0.0       T - Through          1.0  A - Average       N - No  \n",
+       "87930         0.0       T - Through          1.0  A - Average       N - No  \n",
+       "88786         0.0       T - Through          0.0  A - Average       N - No  \n",
+       "88787         0.0       T - Through          0.0  A - Average       N - No  \n",
+       "88788         1.0       T - Through          0.0  A - Average       N - No  \n",
+       "...           ...               ...          ...          ...          ...  \n",
+       "163060        0.0  F - Front/Street          1.0  A - Average       N - No  \n",
+       "163062        0.0  F - Front/Street          1.0  A - Average       N - No  \n",
+       "163066        0.0  F - Front/Street          1.0  A - Average       N - No  \n",
+       "163067        0.0    A - Rear Above          1.0  A - Average      Y - Yes  \n",
+       "163068        0.0    A - Rear Above          1.0  A - Average      Y - Yes  \n",
+       "\n",
+       "[332 rows x 60 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
